--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY requirements.txt /app
 RUN --mount=type=cache,target=/root/.cache/pip \
     && apt-get update \
-    apt-get install libpq-dev -y \
+    && apt-get install libpq-dev -y \
     && pip3 install -r requirements.txt \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
