--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -3,13 +3,9 @@ WORKDIR /app
 
 COPY requirements.txt /app
 
-RUN apt-get update \
-    && apt-get install libpq-dev -y \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-    && mkdir resources
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip3 install -r requirements.txt
+    pip3 install -r requirements.txt \
+    && mkdir resources
 
 COPY . /app
 
